Some of the JDK8+ API was replaced to JDK8