@@ -4,8 +4,8 @@ import javax0.geci.api.GeciException;
 import javax0.geci.api.Source;
 import javax0.geci.tools.CompoundParams;
 
+import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -17,7 +17,7 @@ public class SnippetStore {
     private static final String EPSILON = "epsilon";
 
     SnippetStore() {
-        originals.put(EPSILON, new Snippet(EPSILON, new CompoundParams(EPSILON, Map.of()), List.of()));
+        originals.put(EPSILON, new Snippet(EPSILON, new CompoundParams(EPSILON, Map.of()), Arrays.asList()));
     }
 
     //snippet SnippetStore_name
