@@ -1,10 +1,12 @@
 package javax0.geci.lexeger;
 
-import java.util.List;
 import javax0.geci.javacomparator.lex.LexicalElement;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+
+import java.util.Arrays;
+import java.util.List;
 
 public class TestJavaLexed {
 
@@ -29,24 +31,24 @@ public class TestJavaLexed {
 
     @Test
     void testEmptyNullTransformation() {
-        testNullTransformation(List.of(""));
+        testNullTransformation(Arrays.asList(""));
     }
 
     @Test
     void testOneLinerNullTransformation() {
-        testNullTransformation(List.of("private final var apple= \"appleee\";"));
+        testNullTransformation(Arrays.asList("private final var apple= \"appleee\";"));
     }
 
     @Test
     void testMultiLinerNullTransformation() {
-        testNullTransformation(List.of(
+        testNullTransformation(Arrays.asList(
             "private final var apple= \"appleee\";",
             "private final final 13 'aaaaa' "));
     }
 
     @Test
     void testMultiLinerSpaceNewLineSpaceNullTransformation() {
-        testNullTransformation(List.of(
+        testNullTransformation(Arrays.asList(
             "private final var apple= \"appleee\";   ",
             "    private final final 13 'aaaaa' "));
     }
@@ -54,7 +56,7 @@ public class TestJavaLexed {
 
     @Test
     void iterateThrough() {
-        final var source = new TestSource(List.of(
+        final var source = new TestSource(Arrays.asList(
             "private final var apple= \"appleee\";   ",
             "    private final final 13 'aaaaa' "));
         final String lexed;
@@ -89,7 +91,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("JavaLexed can't be used after being closed.")
     void cantBeUsedOutOfScope() {
-        final var source = new TestSource(List.of(""));
+        final var source = new TestSource(Arrays.asList(""));
         final var sut = new JavaLexed(source);
         try {
         } finally {
@@ -101,7 +103,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can't remove range with bigger start than end.")
     void removeRangeThrowsExceptionWhenWrongStartEndOrder() {
-        final var source = new TestSource(List.of(""));
+        final var source = new TestSource(Arrays.asList(""));
         try(final var sut = new JavaLexed(source)) {
             Assertions.assertThrows(IllegalArgumentException.class, () -> sut.removeRange(2, 1));
         }
@@ -110,7 +112,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can't remove range if end is out of bounds.")
     void removeRangeThrowsExceptionWhenEndOutOfBounds() {
-        final var source = new TestSource(List.of("public final"));
+        final var source = new TestSource(Arrays.asList("public final"));
         try(final var sut = new JavaLexed(source)) {
             Assertions.assertThrows(IndexOutOfBoundsException.class, () -> sut.removeRange(1, 5));
         }
@@ -119,7 +121,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can't remove range if start is out of bounds.")
     void removeRangeThrowsExceptionWhenStartOutOfBounds() {
-        final var source = new TestSource(List.of("public final"));
+        final var source = new TestSource(Arrays.asList("public final"));
         try(final var sut = new JavaLexed(source)) {
             Assertions.assertThrows(IndexOutOfBoundsException.class, () -> sut.removeRange(-1, 2));
         }
@@ -128,7 +130,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can remove a single lexical element.")
     void removesElement() {
-        final var source = new TestSource(List.of("public static final"));
+        final var source = new TestSource(Arrays.asList("public static final"));
         final String lexed;
         try(final var sut = new JavaLexed(source)) {
             sut.remove(2);
@@ -143,7 +145,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can't remove element from out of bounds.")
     void removeElementThrowsExceptionOutOfBounds() {
-        final var source = new TestSource(List.of("public final"));
+        final var source = new TestSource(Arrays.asList("public final"));
         try(final var sut = new JavaLexed(source)) {
             Assertions.assertThrows(IndexOutOfBoundsException.class, () -> sut.remove(-1));
             Assertions.assertThrows(IndexOutOfBoundsException.class, () -> sut.remove(5));
@@ -153,7 +155,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can get a single lexical element by position.")
     void getsElement() {
-        final var source = new TestSource(List.of("public static final"));
+        final var source = new TestSource(Arrays.asList("public static final"));
         try(final var sut = new JavaLexed(source)) {
             final var lexicalElement = sut.get(2);
             Assertions.assertEquals(javax0.geci.javacomparator.LexicalElement.Type.IDENTIFIER, lexicalElement.getType());
@@ -164,7 +166,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can remove a range of lexical elements.")
     void removesRange() {
-        final var source = new TestSource(List.of("final static private"));
+        final var source = new TestSource(Arrays.asList("final static private"));
         final String lexed;
         try(final var sut = new JavaLexed(source)) {
             sut.removeRange(1, 3);
@@ -178,11 +180,11 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can replace a range of lexical elements at the start.")
     void replacesRangeStart() {
-        final var source = new TestSource(List.of("final private"));
-        final var source3 = new TestSource(List.of("private var"));
+        final var source = new TestSource(Arrays.asList("final private"));
+        final var source3 = new TestSource(Arrays.asList("private var"));
         final String lexed;
         try(final var sut = new JavaLexed(source)) {
-            sut.replace(0, 2, List.of(new LexicalElement.Identifier("static"), new LexicalElement.Spacing("   ")));
+            sut.replace(0, 2, Arrays.asList(new LexicalElement.Identifier("static"), new LexicalElement.Spacing("   ")));
             lexed = toLexicalString(sut);
         }
         Assertions.assertEquals("IDENTIFIER[static]\n" +
@@ -193,10 +195,10 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can replace a range of lexical elements between the start and the end.")
     void replacesRangeMiddle() {
-        final var source = new TestSource(List.of("public final static var"));
+        final var source = new TestSource(Arrays.asList("public final static var"));
         final String lexed;
         try(final var sut = new JavaLexed(source)) {
-            sut.replace(2, 4, List.of(new LexicalElement.Identifier("static"), new LexicalElement.Spacing("   ")));
+            sut.replace(2, 4, Arrays.asList(new LexicalElement.Identifier("static"), new LexicalElement.Spacing("   ")));
             lexed = toLexicalString(sut);
         }
         Assertions.assertEquals("IDENTIFIER[public]\n" +
@@ -211,10 +213,10 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can replace a range of lexical elements at the end.")
     void replacesRangeEnd() {
-        final var source = new TestSource(List.of("public final static"));
+        final var source = new TestSource(Arrays.asList("public final static"));
         final String lexed;
         try(final var sut = new JavaLexed(source)) {
-            sut.replace(2, 5, List.of(new LexicalElement.Identifier("static"), new LexicalElement.Spacing("   ")));
+            sut.replace(2, 5, Arrays.asList(new LexicalElement.Identifier("static"), new LexicalElement.Spacing("   ")));
             lexed = toLexicalString(sut);
         }
         Assertions.assertEquals("IDENTIFIER[public]\n" +
@@ -226,7 +228,7 @@ public class TestJavaLexed {
     @Test
     @DisplayName("Can replace a range of lexical elements with the Lex utility class.")
     void replacesRangeWithLex() {
-        final var source = new TestSource(List.of("final private"));
+        final var source = new TestSource(Arrays.asList("final private"));
         final String lexed;
         try(final var sut = new JavaLexed(source)) {
             sut.replace(0, 2, Lex.of("static   "));
